--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:ar2Tox9ej5M7b3Ofubp/DULchGreFzwEiuwZkM3vHQk=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://www.zylinkus.com
 
 LOG_CHANNEL=stack
 
